--- a/CV Generator/src/App.css
+++ b/CV Generator/src/App.css
@@ -1,42 +1,90 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.contentDiv{
+  display: flex;
+  width: 70%;
+  height: 70%;
+  justify-content: center;
+  gap: 50px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentDiv>*{
+  width: 100%;
+  padding: 30px;
+  flex: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.infosToAlign{
+  display: flex;
+}
+h3 {
+  word-wrap: break-word; /* Wrap long words */
+  overflow-wrap: break-word; /* Ensure words break between characters if needed */
+}
+.infosToAlign>*{
+  flex: 1;
+  gap: 10px;
+}
+.previewDiv{
+  
+  list-style: none;
+  border: 3px solid ;
+  height: 85vh;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: auto;
+  min-height: 80vh;
+}
+form{  
+  display: flex;
+  flex-direction: column;
+}
+input{
+  min-height: 50px;
+  border-radius: 7px;
+  border: none;
+  padding: 0 10px;
+  margin: 10px;
+}
+input:active{
+  border: 2px solid ;
+}
+textarea{
+  height: 100px;
+  text-align: left;
+  border-radius: 7px;
+  border:none;
+  padding: 0 10px;
+  margin: 10px;
 }
 
-.card {
-  padding: 2em;
+.btnsContainer>*{
+  margin: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+input[type=button] {
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  font-size: 1.1rem;
 }
+
+input[type=submit]{
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  border: none;
+  font-size: 1.1rem;
+}
+.deleteBtn{background-color: red;}
+.saveBtn{background-color: green;}
